# qrcode_api

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  docker-compose.yaml  logging-dev.yaml  logging.conf  logging.yaml  pyproject.toml  requirements.txt
qrcode_api/: __main__.py
qrcode_api/app/: main.py
qrcode_api/app/api/: __init__.py
qrcode_api/app/api/v1/: __init__.py  deps.py
qrcode_api/app/api/v1/endpoints/: auth.py  qrcodes.py  users.py
qrcode_api/app/core/: config.py  logging.py  security.py
qrcode_api/app/db/: database.py
qrcode_api/app/models/: __init__.py  qrcode.py  user.py
qrcode_api/app/schemas/: __init__.py  pagination.py  qrcode.py  user.py
qrcode_api/app/utils/: pagination.py  types.py
scripts/: README.md  install  run_dev
